@@ -1,0 +1,10 @@
+#
+# Shorewall version 4 - Rfc1918 Macro
+#
+# /usr/share/shorewall/macro.Rfc1918
+#
+#	This macro handles traffic with SOURCE or DEST reserved by RFC 1918.
+#
+###############################################################################
+PARAM	SOURCE	DEST:10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
+PARAM	SOURCE:10.0.0.0/8,172.16.0.0/12,192.168.0.0/16	DEST
