@@ -89,6 +89,9 @@ Problems corrected in Shorewall-perl 4.1.7.
    /sbin/shorewall: line 723:   755 Terminated
    $SHOREWALL_SHELL ${VARDIR}/.restart $debugging restart
 
+4)  A POLICY of ":" in /etc/shorewall/policy would produce Perl
+    run-time errors.
+
 New Features in 4.1.7.
 
 1)  If an interface fails when using balanced multi-ISP routing, the
