@@ -14,6 +14,8 @@ Changes in 4.1.7
 
 7)  Fix priority mingling in tc filters.
 
+8)  Fix policy parsing.
+
 Changes in 4.1.6
 
 1)  Deprecate IMPLICIT_CONTINUE=Yes
